--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -8,8 +8,22 @@
     padding: 10px;
 }
 .profile{
-    background-color: aqua;
+    background-color: rgb(178, 225, 225);
+    
 }
+.myInfo{
+    text-align: center;
+}
+.myDetects{
+    
+    justify-content: center;
+}
+.myDetects h3{
+    background-color: beige;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    padding: 5px;
+}
+
 
 .cart{
     display: grid;
