3 quation is done

--- a/src/Components/Body/Body.css
+++ b/src/Components/Body/Body.css
@@ -11,7 +11,10 @@
     background-color: rgb(178, 225, 225);
     
 }
-
+.question{
+    text-align: justify;
+  text-justify: inter-word;
+}
 
 
 .cart{
